style: fixes responsiveness on mobile

--- a/src/components/Common/About/About.css
+++ b/src/components/Common/About/About.css
@@ -113,3 +113,15 @@
     max-width: 55vw;
   }
 }
+
+@media (max-width: 450px) {
+  .description {
+    width: 85%;
+    font-size: 18px;
+  }
+
+  .container_tech svg {
+    width: 1.5em;
+    height: 1.5em;
+  }
+}
