--- a/src/components/Common/SideNav/Sidenav.css
+++ b/src/components/Common/SideNav/Sidenav.css
@@ -39,3 +39,9 @@
   width: 1.25em;
   height: 1.25em;
 }
+
+@media (max-width:500px) {
+  .sidenav {
+    display: none;
+  }
+}
